feat(TPRUN-1045): new bom for common version declarations + PMD fixes

--- a/camel-talendjob/pom.xml
+++ b/camel-talendjob/pom.xml
@@ -14,8 +14,9 @@
 
     <parent>
         <groupId>org.talend.esb</groupId>
-        <artifactId>esb-parent</artifactId>
+        <artifactId>bom</artifactId>
         <version>7.4.2-SNAPSHOT</version>
+        <relativePath>../bom</relativePath>
     </parent>
 
     <dependencies>
