--- a/features/pom.xml
+++ b/features/pom.xml
@@ -20,8 +20,9 @@
 
      <parent>
         <groupId>org.talend.esb</groupId>
-        <artifactId>esb-parent</artifactId>
+        <artifactId>bom</artifactId>
         <version>7.4.2-SNAPSHOT</version>
+         <relativePath>../bom</relativePath>
     </parent>
 
     <build>
