--- a/transport-jms/pom.xml
+++ b/transport-jms/pom.xml
@@ -14,9 +14,10 @@
 
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<artifactId>esb-parent</artifactId>
+		<artifactId>bom</artifactId>
 		<groupId>org.talend.esb</groupId>
 		<version>7.4.2-SNAPSHOT</version>
+		<relativePath>../bom</relativePath>
 	</parent>
 	<groupId>org.talend.esb</groupId>
 	<artifactId>transport-jms</artifactId>
@@ -29,24 +30,20 @@
 		<dependency>
 			<groupId>org.apache.cxf</groupId>
 			<artifactId>cxf-rt-transports-jms</artifactId>
-			<version>${cxf.version}</version>
 		</dependency>
 
 		<!-- logging -->
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
-			<version>${slf4j.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-log4j12</artifactId>
-			<version>${slf4j.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
-			<version>${log4j.version}</version>
 		</dependency>
 
 		<!-- TESTS -->
