APPINT-31368 Corrected issues found at review.

--- a/auxiliary-storage/features/pom.xml
+++ b/auxiliary-storage/features/pom.xml
@@ -26,6 +26,7 @@
 
     <properties>
         <revision>${auxiliary-storage-features.version}</revision>
+        <cxf-version-range>[${cxf.version},3.4)</cxf-version-range>
     </properties>
 
     <build>
