APPINT-31368 Support for non-clear-text passwords in configuration. (#268)
* APPINT-31368 Initial implementation of secured keystore properties.

* APPINT-31368 Simplification of Blueprints using cm-properties.

* APPINT-31368 Keystore property handling updates.

* APPINT-31368 Keystore property handling updates and corrections.

* APPINT-31368 Patch build support added.

* APPINT-31368 Additional corrections.

* APPINT-31368 Feature file update for keystore configs.

* APPINT-31368 Patch build module list updated.

* APPINT-31368 Correct build failure.

* APPINT-31368 Preparation for merge.

* APPINT-31368 Corrected issues found at review.

--- a/auxiliary-storage/client/pom.xml
+++ b/auxiliary-storage/client/pom.xml
@@ -117,6 +117,11 @@
             <artifactId>jackson-databind</artifactId>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.talend.cxf</groupId>
+            <artifactId>crypto-config</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
@@ -147,6 +152,16 @@
                                     <file>etc/org.talend.esb.auxiliary.storage.client.rest.cfg</file>
                                     <type>cfg</type>
                                     <classifier>org.talend.esb.auxiliary.storage.client.rest</classifier>
+                                </artifact>
+                                <artifact>
+                                    <file>etc/org.talend.esb.auxiliary.storage.client.keystore.cfg</file>
+                                    <type>cfg</type>
+                                    <classifier>org.talend.esb.auxiliary.storage.client.keystore</classifier>
+                                </artifact>
+                                <artifact>
+                                    <file>etc/org.talend.esb.auxiliary.storage.client.enc.keystore.cfg</file>
+                                    <type>cfg</type>
+                                    <classifier>org.talend.esb.auxiliary.storage.client.enc.keystore</classifier>
                                 </artifact>
                                 <artifact>
                                     <file>etc/keystores/clientKeystore.properties</file>
