feat(TPRUN-1045): new bom for common version declarations + PMD fixes

--- a/examples/tesb/locator-rest/client/pom.xml
+++ b/examples/tesb/locator-rest/client/pom.xml
@@ -30,20 +30,18 @@
         <dependency>
             <groupId>org.apache.cxf</groupId>
             <artifactId>cxf-rt-rs-client</artifactId>
-            <version>${cxf.version}</version>
         </dependency>
         <dependency>
             <groupId>org.talend.esb</groupId>
             <artifactId>locator</artifactId>
         </dependency>
         <dependency>
-            <groupId>${project.groupId}</groupId>
+            <groupId>org.talend.esb.examples.locator-rest</groupId>
             <artifactId>locator-rest-demo-common</artifactId>
         </dependency>
         <dependency>
             <groupId>log4j</groupId>
             <artifactId>log4j</artifactId>
-            <version>${log4j.version}</version>
         </dependency>
     </dependencies>
 
