--- a/examples/tesb/locator-rest/service/pom.xml
+++ b/examples/tesb/locator-rest/service/pom.xml
@@ -28,7 +28,7 @@
 
     <dependencies>
         <dependency>
-            <groupId>${project.groupId}</groupId>
+            <groupId>org.talend.esb.examples.locator-rest</groupId>
             <artifactId>locator-rest-demo-common</artifactId>
         </dependency>
     </dependencies>
