--- a/examples/tesb/sam-rest/service/pom.xml
+++ b/examples/tesb/sam-rest/service/pom.xml
@@ -28,7 +28,7 @@
 
     <dependencies>
         <dependency>
-            <groupId>${project.groupId}</groupId>
+            <groupId>org.talend.esb.examples.sam-rest</groupId>
             <artifactId>sam-rest-demo-common</artifactId>
         </dependency>
     </dependencies>
