--- a/examples/tesb/camel-jmx/war/pom.xml
+++ b/examples/tesb/camel-jmx/war/pom.xml
@@ -21,13 +21,12 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>${project.groupId}</groupId>
+			<groupId>org.talend.esb.examples</groupId>
 			<artifactId>camel-jmx-service</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-web</artifactId>
-			<version>${spring.version}</version>
 		</dependency>
 	</dependencies>
 
@@ -55,7 +54,6 @@
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>tomcat-maven-plugin</artifactId>
-                <version>1.1</version>
                 <configuration>
                     <server>myTomcat</server>
                     <url>${tomcat.url}</url>
