--- a/examples/tesb/tomcat/pom.xml
+++ b/examples/tesb/tomcat/pom.xml
@@ -31,7 +31,6 @@
     	<dependency>
             <groupId>org.apache.cxf</groupId>
             <artifactId>cxf-rt-ws-security</artifactId>
-            <version>${cxf.version}</version>
         </dependency>
     </dependencies>
 
@@ -80,6 +79,26 @@
 				<artifactId>locator</artifactId>
 				<version>${project.version}</version>
 			</dependency>
+			<dependency>
+				<groupId>org.talend.esb.examples.tomcat</groupId>
+				<artifactId>crmservice-common</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.talend.esb.examples.tomcat</groupId>
+				<artifactId>crmservice-client</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.talend.esb.examples.tomcat</groupId>
+				<artifactId>reservationservice-common</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.talend.esb.examples.tomcat</groupId>
+				<artifactId>reservationservice-client</artifactId>
+				<version>${project.version}</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 
@@ -122,10 +141,6 @@
 			<comments>A business-friendly OSS license</comments>
 		</license>
 	</licenses>
-
-	<prerequisites>
-		<maven>3.0.3</maven>
-	</prerequisites>
 
 	<build>
 		<resources>
