--- a/pom.xml
+++ b/pom.xml
@@ -53,10 +53,6 @@
         <url>https://github.com/Talend/tesb-rt-se</url>
     </scm>
 
-    <prerequisites>
-        <maven>3.0.0</maven>
-    </prerequisites>
-
     <developers>
         <developer>
             <id>vromaniuk</id>
@@ -91,6 +87,7 @@
     </developers>
 
     <modules>
+        <module>bom-common</module>
         <module>bom</module>
         <module>locator</module>
         <module>locator-auth</module>
@@ -112,310 +109,6 @@
         <module>talend-sapjco3-connector</module>
         <module>camel-core-talend</module>
     </modules>
-    
-    <properties>
-        <cxf.build-utils.version>3.4.3</cxf.build-utils.version>
-        <bundle.plugin.version>2.4.0</bundle.plugin.version>
-    </properties>
-
-    <build>
-        <defaultGoal>install</defaultGoal>
-        <pluginManagement>
-            <plugins>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-compiler-plugin</artifactId>
-                    <version>3.3</version>
-                    <configuration>
-                        <source>1.8</source>
-                        <target>1.8</target>
-                    </configuration>
-                </plugin>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-eclipse-plugin</artifactId>
-                    <version>2.9</version>
-                    <configuration>
-                        <downloadSources>true</downloadSources>
-                    </configuration>
-                </plugin>
-                <plugin>
-                    <groupId>org.apache.felix</groupId>
-                    <artifactId>maven-bundle-plugin</artifactId>
-                    <version>${bundle.plugin.version}</version>
-                    <extensions>true</extensions>
-                </plugin>
-                <plugin>
-                    <groupId>org.apache.aries.blueprint</groupId>
-                    <artifactId>blueprint-maven-plugin</artifactId>
-                    <version>1.10.0</version>
-                    <dependencies>
-                        <dependency>
-                            <groupId>org.apache.xbean</groupId>
-                            <artifactId>xbean-finder-shaded</artifactId>
-                            <version>4.12</version>
-                        </dependency>
-                    </dependencies>
-                </plugin>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-war-plugin</artifactId>
-                    <version>2.6</version>
-                    <configuration>
-                        <webResources>
-                            <resource>
-                                <directory>${project.build.directory}</directory>
-                                <includes>
-                                    <include>LICENSE.txt</include>
-                                </includes>
-                            </resource>
-                        </webResources>
-                    </configuration>
-                </plugin>
-                <plugin>
-                    <groupId>org.apache.cxf</groupId>
-                    <artifactId>cxf-codegen-plugin</artifactId>
-                    <version>${cxf.version}</version>
-                </plugin>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-dependency-plugin</artifactId>
-                    <version>2.10</version>
-                </plugin>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-checkstyle-plugin</artifactId>
-                    <version>3.1.0</version>
-                    <dependencies>
-                        <dependency>
-                            <groupId>org.apache.cxf.build-utils</groupId>
-                            <artifactId>cxf-buildtools</artifactId>
-                            <version>${cxf.build-utils.version}</version>
-                        </dependency>
-                    </dependencies>
-                    <configuration>
-                        <configLocation>
-                            ${cxf.resources.base.path}cxf-checkstyle${cxf.checkstyle.extension}.xml
-                        </configLocation>
-                        <suppressionsLocation>${cxf.resources.base.path}cxf-checkstyle-suppressions.xml
-                        </suppressionsLocation>
-                    </configuration>
-                </plugin>
-                <plugin>
-                    <groupId>org.codehaus.mojo</groupId>
-                    <artifactId>exec-maven-plugin</artifactId>
-                    <version>1.6.0</version>
-                </plugin>
-                <plugin>
-                    <groupId>org.apache.rat</groupId>
-                    <artifactId>apache-rat-plugin</artifactId>
-                    <version>0.11</version>
-                    <configuration>
-                        <numUnapprovedLicenses>350</numUnapprovedLicenses>
-                        <excludeSubProjects>false</excludeSubProjects>
-                        <excludes>
-                            <exclude>.git/**</exclude>
-                            <exclude>.gitignore</exclude>
-                            <exclude>velocity.log</exclude>
-                            <exclude>**/target/**</exclude>
-                            <exclude>distribution/**</exclude>
-                            <exclude>**/jaxb.index</exclude>
-                            <exclude>**/META-INF/MANIFEST</exclude>
-                            <exclude>**/src/test/**/*.txt</exclude>
-                            <exclude>**/.classpath</exclude>
-                            <exclude>**/.settings/**/*</exclude>
-                            <exclude>**/.project</exclude>
-                        </excludes>
-                    </configuration>
-                </plugin>
-                <plugin>
-                    <groupId>org.codehaus.mojo</groupId>
-                    <artifactId>license-maven-plugin</artifactId>
-                    <version>1.8</version>
-                    <configuration>
-                        <licenseName>apache_v2</licenseName>
-                        <licenseFile>${project.build.directory}/LICENSE.txt</licenseFile>
-                        <!--outputDirectory>${project.build.directory}</outputDirectory-->
-                        <thirdPartyFilename>TESBDEPENDENCIES.txt</thirdPartyFilename>
-                        <groupByLicense>true</groupByLicense>
-                        <licenseMerges>
-                            <licenseMerge>The Apache Software License, Version 2.0|Apache
-                                Software License - Version 2.0|Apache License|Apache 2
-                            </licenseMerge>
-                            <licenseMerge>BSD License|BSD|BSD license|The BSD License</licenseMerge>
-                            <licenseMerge>COMMON DEVELOPMENT AND DISTRIBUTION LICENSE (CDDL)
-                                Version 1.0|CDDL License|CDDL 1.0|Common Development and
-                                Distribution License (CDDL) v1.0
-                            </licenseMerge>
-                            <licenseMerge>Common Public License Version 1.0|CPL</licenseMerge>
-                        </licenseMerges>
-                        <excludedGroups>org.talend.esb|org.codehaus.jettison</excludedGroups>
-                        <missingFile>./THIRD-PARTY.properties</missingFile>
-                        <useMissingFile>true</useMissingFile>
-                        <canUpdateCopyright>true</canUpdateCopyright>
-                        <excludes>
-                            <exclude>job/controller/src/test/data-service-authentication/**/*.properties</exclude>
-                            <exclude>job/controller/src/test/job/**/*.properties</exclude>
-                            <exclude>job/controller/src/test/tos-data-service/**/*.properties</exclude>
-                        </excludes>
-                    </configuration>
-                    <executions>
-                        <execution>
-                            <goals>
-                                <goal>update-project-license</goal>
-                                <!-- goal>aggregate-add-third-party</goal-->
-                            </goals>
-                        </execution>
-                    </executions>
-                </plugin>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-resources-plugin</artifactId>
-                    <version>2.7</version>
-                </plugin>
-                <plugin>
-                    <groupId>org.eclipse.jetty</groupId>
-                    <artifactId>jetty-maven-plugin</artifactId>
-                    <version>${jetty.version}</version>
-                </plugin>
-                <plugin>
-                    <groupId>org.codehaus.mojo</groupId>
-                    <artifactId>build-helper-maven-plugin</artifactId>
-                    <version>1.9.1</version>
-                </plugin>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-deploy-plugin</artifactId>
-                    <version>2.8.2</version>
-                </plugin>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-assembly-plugin</artifactId>
-                    <version>3.1.1</version>
-                </plugin>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-pmd-plugin</artifactId>
-                    <version>3.12.0</version>
-                    <dependencies>
-                        <dependency>
-                            <groupId>org.apache.cxf.build-utils</groupId>
-                            <artifactId>cxf-buildtools</artifactId>
-                            <version>${cxf.build-utils.version}</version>
-                        </dependency>
-                    </dependencies>
-                    <configuration>
-                        <rulesets>
-                            <ruleset>${cxf.resources.base.path}cxf-pmd-ruleset.xml</ruleset>
-                            <ruleset>${cxf.resources.base.path}cxf-pmd-custom.xml</ruleset>
-                        </rulesets>
-                        <targetJdk>1.6</targetJdk>
-                        <linkXRef>false</linkXRef>
-                        <!--includeTests>true</includeTests-->
-                        <verbose>true</verbose>
-                        <excludeRoots>
-                            <excludeRoot>${basedir}/src/main/generated</excludeRoot>
-                        </excludeRoots>
-                    </configuration>
-                </plugin>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-project-info-reports-plugin</artifactId>
-                    <version>2.9</version>
-                    <configuration>
-                        <dependencyDetailsEnabled>false</dependencyDetailsEnabled>
-                        <dependencyLocationsEnabled>false</dependencyLocationsEnabled>
-                    </configuration>
-                </plugin>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-surefire-report-plugin</artifactId>
-                    <version>2.20.1</version>
-                </plugin>
-                <plugin>
-                    <groupId>org.codehaus.mojo</groupId>
-                    <artifactId>cobertura-maven-plugin</artifactId>
-                    <version>2.7</version>
-                    <configuration>
-                        <aggregate>true</aggregate>
-                        <outputDirectory>${project.reporting.outputDirectory}/cobertura</outputDirectory>
-                        <formats>
-                            <format>html</format>
-                            <format>xml</format>
-                        </formats>
-                    </configuration>
-                </plugin>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-jxr-plugin</artifactId>
-                    <version>2.5</version>
-                    <configuration>
-                        <aggregate>true</aggregate>
-                    </configuration>
-                </plugin>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-javadoc-plugin</artifactId>
-                    <version>2.10.4</version>
-                    <configuration>
-                        <additionalparam>-Xdoclint:none</additionalparam>
-                    </configuration>
-                </plugin>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-site-plugin</artifactId>
-                    <version>3.8.2</version>
-                </plugin>
-            </plugins>
-        </pluginManagement>
-        <plugins>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>license-maven-plugin</artifactId>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-deploy-plugin</artifactId>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-checkstyle-plugin</artifactId>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-javadoc-plugin</artifactId>
-            </plugin>
-        </plugins>
-    </build>
-
-    <reporting>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-pmd-plugin</artifactId>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-project-info-reports-plugin</artifactId>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-report-plugin</artifactId>
-            </plugin>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>cobertura-maven-plugin</artifactId>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-jxr-plugin</artifactId>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-checkstyle-plugin</artifactId>
-            </plugin>
-        </plugins>
-    </reporting>
 
     <repositories>
         <repository>
@@ -446,21 +139,21 @@
 
     <profiles>
         <profile>
-            <id>packaging</id>
-            <activation>
-                <activeByDefault>true</activeByDefault>
-            </activation>
-            <modules>
-                <module>talend-esb</module>
-            </modules>
-        </profile>
-        <profile>
             <id>examples</id>
             <activation>
                 <activeByDefault>true</activeByDefault>
             </activation>
             <modules>
                 <module>examples</module>
+            </modules>
+        </profile>
+        <profile>
+            <id>packaging</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+            <modules>
+                <module>talend-esb</module>
             </modules>
         </profile>
     </profiles>
