--- a/talend-esb/pom.xml
+++ b/talend-esb/pom.xml
@@ -93,19 +93,12 @@
                             <descriptors>
                                 <!-- descriptors without any repository dependency -->
                                 <descriptor>mvn:org.ops4j.pax.web/pax-web-features/${pax-web.features.tesb.version}/xml/features</descriptor>
-<!--                                <descriptor>mvn:org.apache.karaf.decanter/apache-karaf-decanter/${decanter.features.tesb.version}/xml/features</descriptor>-->
-
-<!--                                <descriptor>mvn:org.hibernate/hibernate-osgi/5.2.18.Final/xml/karaf</descriptor>-->
-<!--                                <descriptor>mvn:org.apache.karaf.features/enterprise-legacy/${enterprise-legacy.features.tesb.version}/xml/features</descriptor>-->
-
                                 <descriptor>mvn:org.apache.cxf.karaf/apache-cxf/${cxf.features.tesb.version}/xml/features</descriptor>
 
                                 <descriptor>mvn:org.apache.jclouds.karaf/jclouds-karaf/${jclouds.features.tesb.version}/xml/features</descriptor>
-<!--&lt;!&ndash;                                <repository>mvn:org.ops4j.pax.cdi/pax-cdi-features/1.1.3/xml/features</repository>&ndash;&gt;-->
-<!--                                <repository>mvn:ca.uhn.hapi.fhir.karaf/hapi-fhir/${hapi-fhir.features.tesb.version}/xml/features</repository>-->
                                 <descriptor>mvn:org.apache.camel.karaf/apache-camel/${camel.features.tesb.version}/xml/features</descriptor>
 
-                                <descriptor>mvn:org.hibernate.validator/hibernate-validator-osgi-karaf-features/${hibernate-validator-osgi-karaf-features.features.tesb.version}/xml/features</descriptor>
+                                <descriptor>mvn:org.hibernate.validator/hibernate-validator-osgi-karaf-features/${hibernate-validator.features.tesb.version}/xml/features</descriptor>
                                 <descriptor>mvn:org.ops4j.pax.jdbc/pax-jdbc-features/${pax-jdbc-features.features.tesb.version}/xml/features</descriptor>
                                 <descriptor>mvn:org.ops4j.pax.jms/pax-jms-features/${pax-jms-features.features.tesb.version}/xml/features</descriptor>
                                 <descriptor>mvn:org.ops4j.pax.transx/pax-transx-features/${pax-transx-features.tesb.version}/xml/features</descriptor>
@@ -124,7 +117,7 @@
                                 <descriptor>mvn:org.apache.activemq/activemq-karaf/${activemq.features.tesb.version}/xml/features-core</descriptor>
                                 <descriptor>mvn:org.apache.activemq/activemq-karaf/${activemq.features.tesb.version}/xml/features</descriptor>
                                 <descriptor>mvn:org.talend.esb.auxiliary.storage/auxiliary-storage-features/${project.version}/xml</descriptor>
-                                <descriptor>mvn:org.talend.esb/features/${project.version}/xml</descriptor>
+                                <descriptor>mvn:org.talend.esb/features/${esb.features.version}/xml</descriptor>
                             </descriptors>
                             <repository>target/features-repo</repository>
                             
@@ -168,6 +161,14 @@
                                     <classifier>org.talend.esb.sam.agent</classifier>
                                     <outputDirectory>target/dependencies/etc</outputDirectory>
                                     <destFileName>org.talend.esb.sam.agent.cfg</destFileName>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>org.talend.esb</groupId>
+                                    <artifactId>bom</artifactId>
+                                    <version>${project.version}</version>
+                                    <type>pom</type>
+                                    <outputDirectory>target/dependencies/bom</outputDirectory>
+                                    <destFileName>pom.xml</destFileName>
                                 </artifactItem>
                             </artifactItems>
                         </configuration>
@@ -277,6 +278,7 @@
                 </executions>
             </plugin>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-antrun-plugin</artifactId>
                 <executions>
                     <execution>
