feat(TPRUN-1045): set autoRefresh=false to avoid bundles refresh due to optional

--- a/talend-esb/src/main/filtered-resources/etc/org.apache.karaf.features.cfg
+++ b/talend-esb/src/main/filtered-resources/etc/org.apache.karaf.features.cfg
@@ -117,3 +117,17 @@ featuresBootAsynchronous=false
 # Store cfg file for config element in feature
 #
 configCfgStore=false
+
+#
+# Define if the feature service automatically refresh bundles
+#
+autoRefresh=false
+
+#
+# Configuration of features processing mechanism (overrides, blacklisting, modification of features)
+# XML file defines instructions related to features processing
+# versions.properties may declare properties to resolve placeholders in XML file
+# both files are relative to ${karaf.etc}
+#
+#featureProcessing=org.apache.karaf.features.xml
+#featureProcessingVersions=versions.properties
