feat(TPRUN-1045): bom & bom-common for examples

--- a/talend-esb/pom.xml
+++ b/talend-esb/pom.xml
@@ -170,6 +170,14 @@
                                     <outputDirectory>target/dependencies/bom</outputDirectory>
                                     <destFileName>pom.xml</destFileName>
                                 </artifactItem>
+                                <artifactItem>
+                                    <groupId>org.talend.esb</groupId>
+                                    <artifactId>bom-common</artifactId>
+                                    <version>${project.version}</version>
+                                    <type>pom</type>
+                                    <outputDirectory>target/dependencies/bom-common</outputDirectory>
+                                    <destFileName>pom.xml</destFileName>
+                                </artifactItem>
                             </artifactItems>
                         </configuration>
                     </execution>
