feat(TPRUN-1045): sort dependencies + xstream bundle usage

--- a/examples/tesb/camel-jmx/service/pom.xml
+++ b/examples/tesb/camel-jmx/service/pom.xml
@@ -40,10 +40,9 @@
 			<groupId>org.apache.camel</groupId>
 			<artifactId>camel-jms</artifactId>
 		</dependency>
-		<!-- Override the Xstream for a CVE issue TESB-32102 -->
 		<dependency>
-			<groupId>com.thoughtworks.xstream</groupId>
-			<artifactId>xstream</artifactId>
+			<groupId>org.apache.servicemix.bundles</groupId>
+			<artifactId>org.apache.servicemix.bundles.xstream</artifactId>
 		</dependency>
 
 		<dependency>
