feat(TPRUN-1045): proper features versions

--- a/talend-esb/src/main/filtered-resources/etc/org.apache.karaf.features.cfg
+++ b/talend-esb/src/main/filtered-resources/etc/org.apache.karaf.features.cfg
@@ -30,7 +30,7 @@ featuresRepositories=\
     mvn:org.apache.karaf.features/standard/${standard.features.tesb.version}/xml/features,\
     mvn:org.apache.karaf.features/spring/${spring.features.tesb.version}/xml/features,\
     mvn:org.apache.karaf.features/enterprise/${enterprise.features.tesb.version}/xml/features,\
-    mvn:org.apache.activemq/activemq-karaf/${activemq.features.tesb.version.version}/xml/features,\
+    mvn:org.apache.activemq/activemq-karaf/${activemq.features.tesb.version}/xml/features,\
     mvn:org.apache.camel.karaf/apache-camel/${camel.features.tesb.version}/xml/features,\
     mvn:org.apache.cxf.karaf/apache-cxf/${cxf.features.tesb.version}/xml/features,\
     mvn:org.talend.esb/features/${project.version}/xml,\
