--- a/talend-esb/pom.xml
+++ b/talend-esb/pom.xml
@@ -927,126 +927,126 @@
                                 <artifactItem>
                                      <groupId>org.apache.servicemix.bundles</groupId>
                                      <artifactId>org.apache.servicemix.bundles.spring-core</artifactId>
-                                     <version>${spring.version}_1</version>
+                                     <version>${spring.bundle.version}</version>
                                      <type>jar</type>
                                      <outputDirectory>target/dependencies</outputDirectory>
                                 </artifactItem>
                                 <artifactItem>
                                      <groupId>org.apache.servicemix.bundles</groupId>
                                      <artifactId>org.apache.servicemix.bundles.spring-expression</artifactId>
-                                     <version>${spring.version}_1</version>
+                                     <version>${spring.bundle.version}</version>
                                      <type>jar</type>
                                      <outputDirectory>target/dependencies</outputDirectory>
                                 </artifactItem>
                                 <artifactItem>
                                      <groupId>org.apache.servicemix.bundles</groupId>
                                      <artifactId>org.apache.servicemix.bundles.spring-beans</artifactId>
-                                     <version>${spring.version}_1</version>
+                                     <version>${spring.bundle.version}</version>
                                      <type>jar</type>
                                      <outputDirectory>target/dependencies</outputDirectory>
                                 </artifactItem>
                                 <artifactItem>
                                      <groupId>org.apache.servicemix.bundles</groupId>
                                      <artifactId>org.apache.servicemix.bundles.spring-aop</artifactId>
-                                     <version>${spring.version}_1</version>
+                                     <version>${spring.bundle.version}</version>
                                      <type>jar</type>
                                      <outputDirectory>target/dependencies</outputDirectory>
                                 </artifactItem>
                                 <artifactItem>
                                      <groupId>org.apache.servicemix.bundles</groupId>
                                      <artifactId>org.apache.servicemix.bundles.spring-context</artifactId>
-                                     <version>${spring.version}_1</version>
+                                     <version>${spring.bundle.version}</version>
                                      <type>jar</type>
                                      <outputDirectory>target/dependencies</outputDirectory>
                                 </artifactItem>
                                 <artifactItem>
                                      <groupId>org.apache.servicemix.bundles</groupId>
                                      <artifactId>org.apache.servicemix.bundles.spring-context-support</artifactId>
-                                     <version>${spring.version}_1</version>
+                                     <version>${spring.bundle.version}</version>
                                      <type>jar</type>
                                      <outputDirectory>target/dependencies</outputDirectory>
                                 </artifactItem>
                                 <artifactItem>
                                      <groupId>org.apache.servicemix.bundles</groupId>
                                      <artifactId>org.apache.servicemix.bundles.spring-aspects</artifactId>
-                                     <version>${spring.version}_1</version>
+                                     <version>${spring.bundle.version}</version>
                                      <type>jar</type>
                                      <outputDirectory>target/dependencies</outputDirectory>
                                 </artifactItem>
                                 <artifactItem>
                                      <groupId>org.apache.servicemix.bundles</groupId>
                                      <artifactId>org.apache.servicemix.bundles.spring-instrument</artifactId>
-                                     <version>${spring.version}_1</version>
+                                     <version>${spring.bundle.version}</version>
                                      <type>jar</type>
                                      <outputDirectory>target/dependencies</outputDirectory>
                                 </artifactItem>
                                 <artifactItem>
                                      <groupId>org.apache.servicemix.bundles</groupId>
                                      <artifactId>org.apache.servicemix.bundles.spring-jdbc</artifactId>
-                                     <version>${spring.version}_1</version>
+                                     <version>${spring.bundle.version}</version>
                                      <type>jar</type>
                                      <outputDirectory>target/dependencies</outputDirectory>
                                 </artifactItem>
                                 <artifactItem>
                                      <groupId>org.apache.servicemix.bundles</groupId>
                                      <artifactId>org.apache.servicemix.bundles.spring-jms</artifactId>
-                                     <version>${spring.version}_1</version>
+                                     <version>${spring.bundle.version}</version>
                                      <type>jar</type>
                                      <outputDirectory>target/dependencies</outputDirectory>
                                 </artifactItem>
                                 <artifactItem>
                                      <groupId>org.apache.servicemix.bundles</groupId>
                                      <artifactId>org.apache.servicemix.bundles.spring-messaging</artifactId>
-                                     <version>${spring.version}_1</version>
+                                     <version>${spring.bundle.version}</version>
                                      <type>jar</type>
                                      <outputDirectory>target/dependencies</outputDirectory>
                                 </artifactItem>
                                 <artifactItem>
                                      <groupId>org.apache.servicemix.bundles</groupId>
                                      <artifactId>org.apache.servicemix.bundles.spring-test</artifactId>
-                                     <version>${spring.version}_1</version>
+                                     <version>${spring.bundle.version}</version>
                                      <type>jar</type>
                                      <outputDirectory>target/dependencies</outputDirectory>
                                 </artifactItem>
                                 <artifactItem>
                                      <groupId>org.apache.servicemix.bundles</groupId>
                                      <artifactId>org.apache.servicemix.bundles.spring-orm</artifactId>
-                                     <version>${spring.version}_1</version>
+                                     <version>${spring.bundle.version}</version>
                                      <type>jar</type>
                                      <outputDirectory>target/dependencies</outputDirectory>
                                 </artifactItem>
                                 <artifactItem>
                                      <groupId>org.apache.servicemix.bundles</groupId>
                                      <artifactId>org.apache.servicemix.bundles.spring-oxm</artifactId>
-                                     <version>${spring.version}_1</version>
+                                     <version>${spring.bundle.version}</version>
                                      <type>jar</type>
                                      <outputDirectory>target/dependencies</outputDirectory>
                                 </artifactItem>
                                 <artifactItem>
                                      <groupId>org.apache.servicemix.bundles</groupId>
                                      <artifactId>org.apache.servicemix.bundles.spring-tx</artifactId>
-                                     <version>${spring.version}_1</version>
+                                     <version>${spring.bundle.version}</version>
                                      <type>jar</type>
                                      <outputDirectory>target/dependencies</outputDirectory>
                                 </artifactItem>
                                 <artifactItem>
                                      <groupId>org.apache.servicemix.bundles</groupId>
                                      <artifactId>org.apache.servicemix.bundles.spring-web</artifactId>
-                                     <version>${spring.version}_1</version>
+                                     <version>${spring.bundle.version}</version>
                                      <type>jar</type>
                                      <outputDirectory>target/dependencies</outputDirectory>
                                 </artifactItem>
                                 <artifactItem>
                                      <groupId>org.apache.servicemix.bundles</groupId>
                                      <artifactId>org.apache.servicemix.bundles.spring-webmvc</artifactId>
-                                     <version>${spring.version}_1</version>
+                                     <version>${spring.bundle.version}</version>
                                      <type>jar</type>
                                      <outputDirectory>target/dependencies</outputDirectory>
                                 </artifactItem>
                                 <artifactItem>
                                      <groupId>org.apache.servicemix.bundles</groupId>
                                      <artifactId>org.apache.servicemix.bundles.spring-websocket</artifactId>
-                                     <version>${spring.version}_1</version>
+                                     <version>${spring.bundle.version}</version>
                                      <type>jar</type>
                                      <outputDirectory>target/dependencies</outputDirectory>
                                 </artifactItem>
@@ -1601,7 +1601,7 @@
                                     <!-- TESB-28029 - remove when we pick up Karaf 4.2.9 -->
                                     <replacefilter
                                         token="5.1.9.RELEASE_1"
-                                        value="${spring.version}_1"/>
+                                        value="${spring.bundle.version}"/>
                                     <!-- TESB-28029 end -->
                                 </replace>
                                 <replace file="target/dependencies/activemq-karaf-${activemq.version}-features-core.xml">
