--- a/talend-esb/src/main/filtered-resources/etc/custom.properties
+++ b/talend-esb/src/main/filtered-resources/etc/custom.properties
@@ -23,6 +23,7 @@
 # All the values specified here will override the default value.
 #
 karaf.framework=equinox
+karaf.framework.equinox=mvn\:org.eclipse.platform/org.eclipse.osgi/${eclipse.osgi.version}
 
 karaf.systemBundlesStartLevel=50
 
