TPRUN-1367 Consistently provide keystore properties as file URL.

--- a/auxiliary-storage/client/etc/org.talend.esb.auxiliary.storage.client.rest.cfg
+++ b/auxiliary-storage/client/etc/org.talend.esb.auxiliary.storage.client.rest.cfg
@@ -34,9 +34,9 @@ auxiliary.storage.service.authentication.password = karaf
 security.username = tadmin
 security.password = tadmin
 security.encryption.username = mystskey
-security.encryption.properties = clientKeystore.properties
+security.encryption.properties = file:${tesb.home}/etc/keystores/clientKeystore.properties
 security.sts.token.username = myclientkey
-security.sts.token.properties = clientKeystore.properties
+security.sts.token.properties = file:${tesb.home}/etc/keystores/clientKeystore.properties
 sts.wsdl.location = http://localhost:8042/services/SecurityTokenService/UT?wsdl
 sts.service.name = {http://docs.oasis-open.org/ws-sx/ws-trust/200512/}SecurityTokenService
 sts.endpoint.name ={http://docs.oasis-open.org/ws-sx/ws-trust/200512/}UT_Port
