--- a/talend-esb/src/main/filtered-resources/etc/org.apache.karaf.features.cfg
+++ b/talend-esb/src/main/filtered-resources/etc/org.apache.karaf.features.cfg
@@ -51,7 +51,9 @@ featuresBoot=\
     framework, \
     system, \
     feature, \
+    talend-common-optionals, \
     talend-common-dependencies, \
+    spring, \
     shell, \
     management, \
     service, \
