bufix(TPRUN-1398): set activemq-client as boot feature

--- a/talend-esb/src/main/filtered-resources/etc/org.apache.karaf.features.cfg
+++ b/talend-esb/src/main/filtered-resources/etc/org.apache.karaf.features.cfg
@@ -71,6 +71,7 @@ featuresBoot=\
     cxf, \
     cxf-jackson, \
     cxf-commands), \
+    activemq-client, \
     camel, \
     camel-cxf, \
     camel-jms,\
